final documentation for swagger
