# swagger.json
@@ -5,7 +5,7 @@
     "description": "An example API created to simulate CRUD operations on a small database",
     "version": "1.0.0"
   },
-  "host": "contacts-backend-49xc.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http",
@@ -32,7 +32,7 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "An example of the data to be returned by retrieving a list of contacts.",
+            "description": "OK",
             "in": "body",
             "schema": {
               "$ref": "#/definitions/contacts"
@@ -49,10 +49,19 @@
         "produces": [
           "application/json"
         ],
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "contact",
+            "in": "body",
+            "description": "Required information to add a contact.",
+            "schema": {
+              "$ref": "#/definitions/singleContact"
+            }
+          }
+        ],
         "responses": {
           "201": {
-            "description": "Created contact response.",
+            "description": "Created",
             "schema": {
               "$ref": "#/definitions/createdResponse"
             }
@@ -81,7 +90,11 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/singleContact"
+            }
           }
         }
       },
@@ -123,7 +136,11 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/deletedResponse"
+            }
           }
         }
       }
@@ -162,6 +179,38 @@
         }
       }
     },
+    "singleContact": {
+      "type": "object",
+      "properties": {
+        "firstName": {
+          "type": "string",
+          "example": "Bob"
+        },
+        "lastName": {
+          "type": "string",
+          "example": "The Builder"
+        },
+        "email": {
+          "type": "string",
+          "example": "canwefixit@gmail.com "
+        },
+        "favoriteColor": {
+          "type": "string",
+          "example": "Tonka Truck Yellow"
+        },
+        "birthday": {
+          "type": "string",
+          "example": "1995-02-27T07:00:00.000Z"
+        }
+      },
+      "required": [
+        "firstName",
+        "lastName",
+        "email",
+        "favoriteColor",
+        "birthday"
+      ]
+    },
     "createdResponse": {
       "type": "object",
       "properties": {
@@ -172,6 +221,19 @@
         "insertedId": {
           "type": "string",
           "example": "63d06d25ac5027cccc3c5eb6"
+        }
+      }
+    },
+    "deletedResponse": {
+      "type": "object",
+      "properties": {
+        "acknowledged": {
+          "type": "boolean",
+          "example": true
+        },
+        "deletedCount": {
+          "type": "number",
+          "example": 1
         }
       }
     }
